--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 .box {
     width: 600px;
-    height: 98vh;
+    height: 100vh;
     background: linear-gradient(360deg, #506b56, #7ba47e);
     box-shadow: 0px -5px 4px 1px rgba(255, 255, 255, 0.377);
     border-radius: 25px;
@@ -69,7 +69,7 @@ span {
     position: absolute;
     text-align: center;
     left: 50%;
-    top: 92%;
+    top: 92vh;
     transform: translate(-50%, -50%);
 }
 
