--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
     background: linear-gradient(360deg, #506b56, #7ba47e);
     box-shadow: 0px -5px 4px 1px rgba(255, 255, 255, 0.377);
     border-radius: 25px;
-    }
+    background-size: cover;
+}
 
 body {
     margin: 0px;
@@ -37,7 +38,7 @@ h1, p {
 
 h1 {
     font-family: 'Junge', cursive;
-    font-size: 50px;
+    font-size: 3vw;
     margin-top: 15px;
     margin-bottom: 2px;
 }
@@ -79,7 +80,7 @@ span {
 
 .proposta {
     color: white;
-    font-size: 2em;
+    font-size: 3vw;;
     font-weight: bold;
     padding: 10px;
     margin: 10px;
