--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ h1, p {
 
 h1 {
     font-family: 'Junge', cursive;
-    font-size: 3vw;
+    font-size: 20px;
+    font-weight: lighter;
     margin-top: 15px;
     margin-bottom: 2px;
 }
