--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 body {
     margin: 0px;
     text-align: center;
-    background: linear-gradient(180deg, #64DBA0, #327956 );
+    background-color: #506b56;
 }
 
 img {
@@ -38,7 +38,7 @@ h1, p {
 
 h1 {
     font-family: 'Junge', cursive;
-    font-size: 20px;
+    font-size: 205x;
     font-weight: lighter;
     margin-top: 15px;
     margin-bottom: 2px;
@@ -82,7 +82,7 @@ span {
 
 .proposta {
     color: white;
-    font-size: 3vw;;
+    font-size: 20px;;
     font-weight: bold;
     padding: 10px;
     margin: 10px;
